[package]
name = "bitwarden-backup"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
reqwest = { version = "0.12.15", features = ["json"] }
serde_json = "1.0"
base64 = "0.21"
